--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,24 @@
-Welcome to HOD Promises!
-  
-Click <%= link_to 'here', promises_path, id: "my-link" %> to see a list of your HOD Promises
-<div id="basic"></div>
+<div class="grid-wrapper">
+  <div class="grid">
+    <div class="grid__cell">
+      <br/>
+      <p>NYC::HOD -- Angular JS Dark Magic</p>
+    </div>
+  </div>
+</div>
+
+<div class="grid-wrapper insights-article insights-article--blue">
+  <div class="grid">
+    <div class="grid__cell">
+      <p class="insights-article__date">March 21, 2014</p>
+      <h2 class="insights-article__title">Promises</h2>
+      <p class="insights-article__author">
+        <span class="insights-article__author-name">Dan Lockman + Igor Lilic</span>
+      </p>
+      <p class="insights-article__categories">
+         <%= link_to 'Click here to get your HOD Promises', promises_path, id: "my-link", class: "insights-article__category "%>
+      </p>
+      <div id="basic"></div>
+    </div>
+  </div>
+</div>
