--- a/app/views/promises/index.html.erb
+++ b/app/views/promises/index.html.erb
@@ -24,15 +24,8 @@
         </table>
       </p>
       <p class="insights-article__categories">
-         <%= link_to "We can do better, can't we?", promises_path, id: "my-link", class: "insights-article__category "%>
+        <a href="/index2.html" class="insights-article__category">We can do better, can't we?</a>
       </p>
     </div>
   </div>
 </div>
-
-
-
-    
-      
-
-  
