--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>ThoughtWorksNYC | Home Office Day</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => false %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => false %>
-  <link rel="stylesheet" href="//showcase.thoughtworks.com/css/candy.css">
+  <link rel="stylesheet" href="candy.css">
   <%= csrf_meta_tags %>
 </head>
 <body>
